--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -3697,6 +3697,11 @@ fieldset + fieldset
 			top: 5px;
 		}
 
+        .__files .list-ico
+        {
+            width: 30px;
+        }
+
         .__items .list-ico ~ .list-name,
         .__files .list-ico ~ .list-name
         {
@@ -3709,11 +3714,25 @@ fieldset + fieldset
 			color: #4c4c4c;
 			display: inline-block;
 			font-size: 14px;
+            font-weight: 500;
             position: relative;
 			text-shadow: 1px 1px #fff;
 			vertical-align: top;
             z-index: 25;
 		}
+
+        .__files .list-name
+        {
+            vertical-align: middle;
+        }
+
+        .__files .list-descr
+        {
+            color: #4c4c4c;
+            display: block;
+            font-size: 12px;
+            margin: 0 0 0 40px;
+        }
 
 		.__items .list-t
 		{
@@ -3863,9 +3882,25 @@ fieldset + fieldset
     padding: 10px 20px;
 }
 
-.__files .list.__sub .list-block
+    .__files .list-img
+    {
+        display: inline-block;
+        height: 30px;
+        margin: 0 5px 0 0;
+        overflow: hidden;
+        vertical-align: middle;
+        width: 30px;
+    }
+
+        .__files .list-img *
+        {
+            display: block;
+            max-width: 100%;
+        }
+
+.__files .list.__sub .list-item
 {
-    padding-left: 50px;
+    margin: 0 0 0 40px;
 }
 
 
@@ -6040,3 +6075,67 @@ input.ui-grid-filter-input[type="text"]
     height: 40px;
     line-height: 20px;
 }
+
+/* Popup */
+.overlay
+{
+    background: rgba(0,0,0,.7);
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    text-align: center;
+    top: 0;
+    z-index: 9000;
+}
+
+    .overlay .overlay-cnt
+    {
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .overlay .overlay-cnt::after
+    {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+    }
+
+        .overlay .popup
+        {
+            background: #fff;
+            display: inline-block;
+            max-height: 600px;
+            max-width: 800px;
+            vertical-align: middle;
+        }
+
+            .popup .popup-cnt
+            {
+                height: 100%;
+                padding: 5px;
+                text-align: center;
+
+                -webkit-box-sizing: border-box;
+                        box-sizing: border-box;
+            }
+
+                .popup .image
+                {
+                    height: 590px;
+                    overflow: hidden;
+                    width: 100%;
+                }
+
+                    .popup .image img
+                    {
+                        display: inline-block;
+                        max-height: 100%;
+                        max-width: 100%;
+                        vertical-align: middle;
+                    }
