Add placeholder and choosen elements + fix

--- a/PLATFORM/Design/css/base-modules.css
+++ b/PLATFORM/Design/css/base-modules.css
@@ -2355,6 +2355,13 @@ h3
 	margin: 20px 0 10px;
 }
 
+.sub-t.__border
+{
+    border-bottom: 1px solid #dee9f0;
+    margin: 20px 0 0;
+    padding: 0 0 10px;
+}
+
 .__right
 {
     text-align: right;
@@ -3141,13 +3148,13 @@ fieldset + fieldset
 }
 
 
-/* Tiles  */
 /* Tiles */
 .tile-group
 {
+    background: rgba(0,0,0,.035);
     margin: 0 -10px 0 0;
 	min-width: 130px;
-	overflow: hidden;
+    padding: 0 0 10px 10px;
 	position: relative;
 	width: auto;
 }
@@ -3162,7 +3169,7 @@ fieldset + fieldset
 
 .tile-group + .tile-group
 {
-	padding: 0;
+    margin-top: 30px;
 }
 
 .tile-group.one
@@ -3731,6 +3738,10 @@ fieldset + fieldset
             color: #4c4c4c;
             display: block;
             font-size: 12px;
+        }
+
+        .__files .list-ico ~ .list-descr
+        {
             margin: 0 0 0 40px;
         }
 
@@ -3836,38 +3847,49 @@ fieldset + fieldset
             color: #a6a6a6;
         }
 
-.list.__properties
+.list.__choosen
 {
 	margin: 10px 0;
 }
 
-	.__properties .list-item
+	.__choosen .list-item
 	{
-		margin: 0 10px 0 0;
+		margin: 0 10px 10px 0;
 		position: relative;
 	}
 
-		.__properties .list-name
+		.__choosen .list-name
 		{
 			background: #43b0e6;
 			color: #fff;
-			float: left;
+			float: right;
 			font-size: 11px;
-			padding: 2px 5px;
+            max-width: 345px;
+            min-height: 15px;
+            min-width: 30px;
+            overflow: hidden;
+            padding: 2px 5px 3px;
+            text-overflow: ellipsis;
 			vertical-align: top;
+            white-space: nowrap;
 		}
 
-		.__properties .list-remove
+		.__choosen .list-remove
 		{
-			color: #4c4c4c;
+			color: #a1c0d4;
 		    cursor: pointer;
-		    float: right;
+		    float: left;
 		    font-family: caption;
 		    font-size: 17px;
 		    font-weight: bold;
 		    line-height: 1;
-		    margin: 1px 0 0 4px;
+		    margin: 3px 4px 0 0;
 		}
+
+        .__choosen .list-remove:hover
+        {
+            color: #43b0e6;
+        }
 
 .__files .list-item
 {
@@ -6079,12 +6101,12 @@ input.ui-grid-filter-input[type="text"]
 /* Image preview */
 .image-preview
 {
-    height: 300px;
+    height: 450px;
     left: 55px;
     overflow: hidden;
     position: absolute;
     top: 10px;
-    width: 300px;
+    width: 450px;
     z-index: 50;
 }
 
