Fix close in ui-select
Former-commit-id: f7aaca106c2cc53190389fc8d53867f64f0d0962

--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/select2.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/select2.css
@@ -459,7 +459,7 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi .select2-choices .select2-search-field input {
-    padding: 5px;
+    padding: 7px 10px 7px 0;
     margin: 1px 0;
 
     font-family: sans-serif;
@@ -531,6 +531,16 @@ disabled look for disabled choices in the results dropdown
 
 .select2-container-multi .select2-search-choice-close {
     left: 3px;
+}
+
+.select2-container-multi .select2-search-choice-close::after
+{
+    color: #f6f6f6;
+}
+
+.select2-container-multi .select2-search-choice-close:hover::after
+{
+    color: #fff;
 }
 
 .select2-container-multi .select2-choices .select2-search-choice .select2-search-choice-close:hover {
