--- a/PLATFORM/Design/documentation/templates/breadcrumbs.html
+++ b/PLATFORM/Design/documentation/templates/breadcrumbs.html
@@ -1,4 +1,7 @@
 <div class="breadcrumbs">
+    <a class="back">
+        <i class="back-ico fa fa-arrow-left"></i>
+    </a>
     <ul class="menu __inline">
         <li class="menu-item">
             <a class="menu-link" href="#">Catalogs</a>
