Fix store caching Fix catalog binary export Fix sample data initialization
Former-commit-id: 0dddead8ac9c5e9ed949de6a99daf63caf336766

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/templates/sampleDataInitialization.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/exportImport/templates/sampleDataInitialization.tpl.html
@@ -1,5 +1,5 @@
 ﻿<div class="window">
-    <div class="window-status">
+    <div class="window-status" ng-if="!notification.finished">
         <div class="progress-bar"></div>
     </div>
     <header class="window-head">
