Add class mini to tile.quadro for shop

--- a/PLATFORM/Design/css/base-modules.css
+++ b/PLATFORM/Design/css/base-modules.css
@@ -3933,6 +3933,12 @@ button.btn
     width: 510px;
 }
 
+.tile.quadro.wide.mini
+{
+    height: 120px;
+    width: 510px;
+}
+
 .tile .tile-count
 {
     color: #999;
