--- a/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -4370,6 +4370,32 @@ button.btn
     margin: -1px -20px 0;
 }
 
+.md-editor.md-fullscreen-mode
+{
+    background: #ffffff !important;
+    border: 0 none !important;
+    height: 100%;
+    left: 0;
+    margin: 0;
+    padding: 60px 30px 15px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99999;
+
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.md-editor.active
+{
+    border-color: #66afe9;
+    outline: 0 none;
+
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+}
+
 .md-editor textarea
 {
     background: none;
@@ -4398,7 +4424,6 @@ button.btn
 
 .md-editor .btn-toolbar .md-controls
 {
-    display: none;
     float: right;
     margin: 3px 10px 0 0;
 }
@@ -4422,6 +4447,47 @@ button.btn
 .md-fullscreen-controls
 {
     display: none;
+}
+
+.md-editor.md-fullscreen-mode .md-header
+{
+    background: none;
+    position: fixed;
+    text-align: center;
+    top: 20px;
+    width: 100%;
+}
+
+.md-editor.md-fullscreen-mode .btn-group
+{
+    display: inline-block;
+    float: none;
+}
+
+.md-editor.md-fullscreen-mode .md-fullscreen-controls
+{
+    display: block;
+    position: absolute;
+    right: 20px;
+    text-align: right;
+    top: 20px;
+    z-index: 1002;
+}
+
+.md-editor.md-fullscreen-mode .md-fullscreen-controls a
+{
+    clear: right;
+    color: #b3b3b3;
+    height: 30px;
+    margin: 10px;
+    text-align: center;
+    width: 30px;
+}
+
+.md-editor.md-fullscreen-mode .md-input,
+.md-editor.md-fullscreen-mode .md-preview
+{
+    padding: 20px 20px 20px 120px !important;
 }
 
 
@@ -8066,3 +8132,22 @@ input.ui-grid-filter-input[type="text"]
     {
         display: block;
     }
+
+        .tab-cnt h1,
+        .tab-cnt h2,
+        .tab-cnt h3
+        {
+            margin: 20px 0;
+        }
+
+        .tab-cnt p,
+        .tab-cnt ul,
+        .tab-cnt ol
+        {
+            margin: 0 0 10px;
+        }
+
+        .tab-cnt img
+        {
+            margin: 10px 0;
+        }
